# utilities

./: .gitignore  README.md  SETUP.md  gsd-auto.ps1  gsd-auto.sh
advisor/: README.md  advisor  advisor.py  config.json
advisor/tests/: test_advisor.py
arch-advisor/: README.md  arch_advisor.py
archive/arch-advisor/: arch-advisor  config.json
archive/codex-auto/: codex-tmux-auto-approve.sh
archive/sec-advisor/: README.md  sec_advisor.py
cc-commands/: 0-done.md  0-prd.md  0-ss.md  0-sync-commands.md  0-sync.md  0-teach.md  CLAUDE.md  manifest  setup-session-tool.txt
codex-auto/: codex-tmux-auto-approve.sh
council/: README.md  council
dev-env/: README.md  dev-env
dev-env/tests/: cleanup-project-dev-processes.sh  cleanup-tmux-session.sh  runner-exit.sh
gsd-auto/delay-machine/: delay-machine.sh
gsd-auto/v1/: gsd-auto.sh
gsd-auto/v2/: HANDOFF.md  (+1 more)
interval-timer/: README.md  app.js  index.html  styles.css
pomodoro-tui/: README.md  pyproject.toml
pomodoro-tui/src/pomodoro_tui/: __init__.py  cli.py  config.py  stats.py  timer.py  tui.py
pomodoro-tui/src/pomodoro_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pomodoro-tui/tests/: test_config.py  test_stats.py  test_timer.py
prompt-queue/: .env.local  README.md  SKILL_README.md  collect-prompts  config.json  prompt-queue  prompt_queue.py  sleep_then_run.sh
sec-advisor/: README.md  config.json  sec-advisor  sec_advisor.py
statusline/: gsd-statusline.js  install.sh
v2/: gemini-discussion.md
v3/: gsd-auto-stop.sh  start.sh  v3.sh
v4/: README.md  SETUP.md  gsd-auto-v4
(+41 files in other folders)
